atualização do array de questionário e início da utilização das informações

--- a/questions.html
+++ b/questions.html
@@ -48,17 +48,17 @@
             </div>
 
             <div class="options">
-                <label class="option option--red">
-                    A) Shakira <input class="option--red" type="radio" id="contactChoice" name="contact"/>
+                <label class="question-options option--red">
+                    A)  <input class="option--red" type="radio" id="contactChoice" name="contact"/>
                 </label>
-                <label class="option option--blue">
-                    B) São Jorge <input class="option--blue" type="radio" id="contactChoice" name="contact" />
+                <label class="question-options option--blue">
+                    B)  <input class="option--blue" type="radio" id="contactChoice" name="contact" />
                 </label>
-                <label class="option option--orange">
-                    C) Goku <input class="option--orange" type="radio" id="contactChoice" name="contact" />
+                <label class="question-options option--orange">
+                    C)  <input class="option--orange" type="radio" id="contactChoice" name="contact" />
                 </label>
-                <label class="option option--green">
-                    D) Pedro Alvares Cabral<input class="option--green" type="radio" id="contactChoice"
+                <label class="question-options option--green">
+                    D)  <input class="option--green" type="radio" id="contactChoice"
                         name="contact"/>
                 </label>
             </div>
