--- a/quiz.html
+++ b/quiz.html
@@ -52,6 +52,10 @@
 
 </body>
 
+<footer class="footer">
+    <h5>Created by Mikael Espinola © 2023</h4>
+</footer>
+
 <script src="./scripts/index.js"></script>
 
 </html>
