--- a/donePage.html
+++ b/donePage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
 </head>
+
 <body>
     <div class="container">
         <!-- <video autoplay muted loop>
@@ -20,10 +22,14 @@
             </div>
             <input id="replayBtn" type="button" value="Replay">
             <input id="finishBtn" type="button" value="Finish">
-            
-            
+
+
         </div>
     </div>
 </body>
+<footer class="footer">
+    <h5>Created by Mikael Espinola © 2023</h4>
+</footer>
 <script src="./scripts/done.js"></script>
+
 </html>
