--- a/index.html
+++ b/index.html
@@ -8,24 +8,32 @@
   <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
 </head>
 <body>
+  <img id="img-capa" src="./assets/imgs/capa-login.jpg" alt="">
   <header>
     <h1>Quiz de perguntas</h1>
   </header>
   <main class="user-form">
     <form id="formulario_usuario">
-      <h2>Por favor, identifique-se</h2>
-      <label>
+      <h2 class="colorFont">Por favor, identifique-se</h2>
+      <label class="colorFont">
         First name
         <input id="name" name="firstname" required="required" />
       </label>
-      <label>
+      <label class="colorFont">
         Email
         <input id="email" name="email" required="required" type="email" />
+      </label>
+      <label class="colorFont">
+        Nº of Questions:
+        <input id="quantity" name="quantity" type="number" value="10" min="10" max="50" />
       </label>
       <button id="startBtn" type="submit">Start</button>
     </form>
   </main>
 </body>
+<footer class="footer">
+  <h5>Created by Mikael Espinola © 2023</h4>
+</footer>
 
 <script src="./scripts/login.js"></script>
 </html>
