--- a/quiz.html
+++ b/quiz.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="./styles/quiz.css">
     <link rel="stylesheet" href="styles/loadingStyle.css">
+    <link rel="stylesheet" href="styles/mediaQuiz.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
@@ -14,6 +15,7 @@
     <img id="img-capa" src="./assets/imgs/capa-login.jpg" alt="">
     <div id="cabecalho">
         <img id="logo" src="./assets/imgs/Captura de tela 2023-04-09 120040.png" alt="Logo">
+        <img id="logoMobile" src="./assets/imgs/kahootIconMobile.png" alt="">
         <div class="user">
             <i class="fa-solid fa-face-smile-beam"></i>
             <label id="userName"></label>
@@ -28,18 +30,14 @@
 <body>
     <div class="container">
         <div class="body">
-            <aside>
+            <aside class="score">
                 <h2>SCORE</h2>
-                <h3 id="current-score"></h3>
+                <h3 id="current-score">0</h3>
             </aside>
             <main id="quiz">
                 <div class="box">
                     <h1 id="question-title"></h1>
                 </div>
-                <div>
-                    <img id="img" id="question-image" src="./assets/imgs/descobrimento-brasil.webp" alt="">
-                </div>
-
                 <div class="options">
                     <button id="option--red" class="btn question-options option--red "></button>
                     <button id="option--blue" class="btn question-options option--blue "></button>
@@ -47,7 +45,7 @@
                     <button id="option--green" class="btn question-options option--green "></button>
                 </div>
             </main>
-            <aside class="helper">
+            <aside class="helper theCards">
                 <div></div>
                 <button class="btn1 option--red">WILD CARD</button>
                 <button class="btn1 option--blue">SOMEONE TO HELP</button>
@@ -85,6 +83,6 @@
     <h5>Created by Mikael Espinola © 2023</h4>
 </footer>
 
-<script src="./scripts/index.js"></script>
+<script src="./scripts/quiz.js"></script>
 
 </html>
